syntax = "proto3";

package konvoy.mesh.v1alpha1;

option go_package = "v1alpha1";

import "google/protobuf/timestamp.proto";

// DataplaneStatus defines the observed state of a Dataplane.
message DataplaneStatus {

  // List of ADS subscriptions created by a given Dataplane.
  repeated DiscoverySubscription subscriptions = 1;
}

// DiscoverySubscription describes a single ADS subscription
// created by a Dataplane to the Control Plane.
// Ideally, there should be only one such subscription per Dataplane lifecycle.
// Presence of multiple subscriptions might indicate one of the following
// events:
// - transient loss of network connection between Dataplane and Control Plane
// - Dataplane restart (i.e. hot restart or crash)
// - Control Plane restart (i.e. rolling update or crash)
// - etc
message DiscoverySubscription {

  // Unique id per ADS subscription.
  string id = 1;

  // Control Plane instance that handled given subscription.
  string control_plane_instance_id = 2;

  // Time when a given Dataplane connected to the Control Plane.
  google.protobuf.Timestamp connect_time = 3;

  // Time when a given Dataplane disconnected from the Control Plane.
  google.protobuf.Timestamp disconnect_time = 4;

  // Time when the Control Plane updated subscription status most recently.
  google.protobuf.Timestamp last_status_update_time = 5;

  // Status of the ADS subscription.
  DiscoverySubscriptionStatus status = 6;
}

// DiscoverySubscriptionStatus defines status of an ADS subscription.
message DiscoverySubscriptionStatus {

  // Total number of xDS responses sent back to the Dataplane.
  uint64 total_responses_sent = 1;

  // Total number of xDS responses ACKed by the Dataplane.
  uint64 total_responses_acknowledged = 2;

  // Total number of xDS responses NACKed by the Dataplane.
  uint64 total_responses_rejected = 3;

  uint64 cds_responses_sent = 4;
  uint64 cds_responses_acknowledged = 5;
  uint64 cds_responses_rejected = 6;

  uint64 eds_responses_sent = 7;
  uint64 eds_responses_acknowledged = 8;
  uint64 eds_responses_rejected = 9;

  uint64 lds_responses_sent = 10;
  uint64 lds_responses_acknowledged = 11;
  uint64 lds_responses_rejected = 12;

  uint64 rds_responses_sent = 13;
  uint64 rds_responses_acknowledged = 14;
  uint64 rds_responses_rejected = 15;
}
